Fri Dec  4 10:21:57 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.cpp:
          Extended logging

Fri Dec  4 10:11:57 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.h:
          Removed listener callbacks that are handled by the subscriber

Fri Dec  4 09:49:57 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/Updater/*
          Use the stateconnector as starting point

        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.cpp:
          First compile fixes

        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.h:
          Handle data_on_readers

Fri Dec  4 09:34:09 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/tests/CIAO/CommandlinePassage/run_test.pl:
        * tests/CIAO_ComponentServer/Activator/run_test.pl:
        * tests/IDL_Test/Double_Inherited_Component/run_test.pl:
          Resolved fuzz errors/warnings.

Fri Dec  4 09:04:34 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/CIAO_ComponentServer/Activator/run_test.pl:
        * tests/CIAO_ComponentServer/Basic/run_test.pl:
          Resolved fuzz errors/warnings.

Fri Dec  4 08:32:42 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/examples/Hello/descriptors/run_test.pl:
          Resolved fuzz errors/warnings.

Thu Dec  3 20:12:57 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender_exec.cpp
        * connectors/dds4ccm/tests/CSLQoS/Receiver/CSL_QoSTest_Receiver_exec.cpp
        * connectors/dds4ccm/tests/CSLQoS/Sender/CSL_QoSTest_Sender_exec.cpp